Add DB connection

--- a/DailyJournaling.API/appsettings.json
+++ b/DailyJournaling.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=DailyJournaling;Username=postgres;Password=PLACEHOLDER"
+    "DefaultConnection": "Host=db;Port=5432;Database=DailyJournaling;Username=postgres;Password=PLACEHOLDER"
   },
   "Redis": {
     "ConnectionString": "localhost:${REDIS_PORT}"
