--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,3 +10,11 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  pgadmin:
+    image: dpage/pgadmin4:8.10
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+
+volumes:
+  pgadmin_data:
